--- a/app/src/main/res/layout/activity_annotation_test.xml
+++ b/app/src/main/res/layout/activity_annotation_test.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".annotations.AnnotationTestActivity">
+    tools:context=".annotations_fanshe.AnnotationTestActivity">
     <TextView
         android:id="@+id/tv_test"
         android:textSize="30sp"
